--- a/hacer_denuncia.html
+++ b/hacer_denuncia.html
@@ -51,6 +51,7 @@
           <a href="menu.html" class="btn btn-outline-secondary">Cancelar</a>
         </div>
       </form>
+      <div id="ReportError" class="mt-3 text-center text-danger" style="display:none;"></div>
     </div>
   </div>
 
