--- a/ver_denuncias.html
+++ b/ver_denuncias.html
@@ -42,6 +42,95 @@
   </div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-<script src="js/app.js"></script>
+<script>
+
+    // Función para cargar denuncias
+    async function cargarDenuncias(status = "Todas") {
+      try {
+        const user_id = localStorage.getItem('user_id');
+        const token = localStorage.getItem('token');
+
+        if(!user_id || !token){
+          alert('No cuenta con las credenciales necesarias');
+          return;
+        };
+
+
+        const body = { user_id };
+        if (status !== "Todas") {
+          const mapStatus = {
+            Pendiente: "pending",
+            Aprobada: "created",
+            Rechazada: "rejected"
+          };
+          body.status = mapStatus[status];
+        };
+
+        const response = await fetch('http://localhost:3000/api/report/get-reports', {
+          method: "POST",
+          headers: { "Content-Type": "application/json" },
+          body: JSON.stringify(body)
+        });
+
+        if (!response.ok) {
+          throw new Error(`Error al obtener denuncias: ${response.statusText}`);
+        };
+
+        const data = await response.json();
+
+        console.log('data: ', data);
+        mostrarDenuncias(data);
+      } catch (error) {
+        console.error(error);
+        alert("Hubo un error al cargar las denuncias");
+      }
+    }
+
+    // Función para renderizar denuncias en el DOM
+    function mostrarDenuncias(denuncias = []) {
+      const lista = document.getElementById("listaDenuncias");
+      lista.innerHTML = "";
+
+      if (!denuncias || denuncias.length === 0) {
+        lista.innerHTML = `
+          <div class="alert alert-secondary text-center mt-3">
+            No se encontraron denuncias para este filtro.
+          </div>`;
+        return;
+      }
+
+      denuncias.forEach((d) => {
+        const card = document.createElement("div");
+        card.className = "card mb-3 shadow-sm";
+        card.innerHTML = `
+          <div class="card-body">
+            <h5 class="card-title text-primary">${d.title || "Sin título"}</h5>
+            <p class="card-text mb-1"><strong>Categoría:</strong> ${d.category || "N/A"}</p>
+            <p class="card-text mb-1"><strong>Descripción:</strong> ${d.description || "Sin descripción"}</p>
+            <p class="card-text mb-1"><strong>Ubicación:</strong> ${d.location || "No especificada"}</p>
+            <span class="badge ${
+              d.status === "pending"
+                ? "bg-warning text-dark"
+                : d.status === "created"
+                ? "bg-success"
+                : "bg-danger"
+            }">${d.status.toUpperCase()}</span>
+          </div>
+        `;
+        lista.appendChild(card);
+      });
+    }
+
+    // Función para manejar los clics de los filtros
+    function filterClick(status) {
+      cargarDenuncias(status);
+    }
+
+    // Cargar todas las denuncias al iniciar
+    document.addEventListener("DOMContentLoaded", () => {
+      cargarDenuncias("Todas");
+    });
+
+</script>
 </body>
 </html>
