--- a/detalle_denuncia.html
+++ b/detalle_denuncia.html
@@ -18,13 +18,81 @@
   </nav>
 
   <div class="container py-4" style="max-width:900px">
-    <div id="detalleArea"></div>
-    <div class="mt-3">
+    <div id="detalleArea" class="card p-4 shadow-sm"></div>
+    <div class="mt-3 d-flex gap-2">
       <a href="ver_denuncias.html" class="btn btn-outline-secondary">← Regresar</a>
+      <button id="btnEditar" class="btn btn-warning text-dark">Editar</button>
+      <button id="btnEliminar" class="btn btn-danger">Eliminar</button>
     </div>
   </div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-<script src="js/app.js"></script>
+<script>
+  const params = new URLSearchParams(window.location.search);
+  const id = params.get("id");
+
+  document.addEventListener("DOMContentLoaded", async () => {
+    try {
+      const token = localStorage.getItem('token');
+      const response = await fetch(`http://localhost:3000/api/report/get-report/${id}`, {
+        headers: { "Authorization": `Bearer ${token}` }
+      });
+      const data = await response.json();
+
+      const detalle = document.getElementById("detalleArea");
+      detalle.innerHTML = `
+        <h4 class="text-primary">${data.title}</h4>
+        <p><strong>Categoría:</strong> ${data.category}</p>
+        <p><strong>Descripción:</strong> ${data.description}</p>
+        <p><strong>Ubicación:</strong> ${data.location}</p>
+        <p><strong>Estado:</strong> ${data.status}</p>
+      `;
+    } catch (error) {
+      console.error(error);
+      alert("No se pudo cargar la denuncia");
+    }
+  });
+
+  document.getElementById("btnEditar").addEventListener("click", async () => {
+    const nuevoTitulo = prompt("Nuevo título:");
+    if (!nuevoTitulo) return;
+
+    try {
+      const token = localStorage.getItem('token');
+      const response = await fetch(`http://localhost:3000/api/report/update-report/${id}`, {
+        method: "PUT",
+        headers: { 
+          "Content-Type": "application/json",
+          "Authorization": `Bearer ${token}`
+        },
+        body: JSON.stringify({ title: nuevoTitulo })
+      });
+      if (!response.ok) throw new Error("Error al editar");
+      alert("Denuncia actualizada correctamente");
+      location.reload();
+    } catch (error) {
+      console.error(error);
+      alert("No se pudo editar la denuncia");
+    }
+  });
+
+  document.getElementById("btnEliminar").addEventListener("click", async () => {
+    if (!confirm("¿Deseas eliminar esta denuncia?")) return;
+
+    try {
+      const token = localStorage.getItem('token');
+      const response = await fetch(`http://localhost:3000/api/report/delete-report/${id}`, {
+        method: "DELETE",
+        headers: { "Authorization": `Bearer ${token}` }
+      });
+      if (!response.ok) throw new Error("Error al eliminar");
+      alert("Denuncia eliminada correctamente");
+      window.location.href = "ver_denuncias.html";
+    } catch (error) {
+      console.error(error);
+      alert("No se pudo eliminar la denuncia");
+    }
+  });
+</script>
 </body>
 </html>
