--- a/menu.html
+++ b/menu.html
@@ -9,11 +9,16 @@
 </head>
 <body class="bg-gradient">
   <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm">
-    <div class="container">
+    <div class="container d-flex justify-content-between align-items-center">
       <a class="navbar-brand d-flex align-items-center" href="#">
         <img src="img/logo.svg" style="height:40px;object-fit:contain" alt="logo">
         <span class="ms-2 text-primary fw-bold">Red de Apoyo</span>
       </a>
+
+      <!-- 🔹 Botón de cerrar sesión -->
+      <button id="logoutBtn" class="btn btn-outline-danger btn-sm">
+        🔒 Cerrar sesión
+      </button>
     </div>
   </nav>
 
@@ -36,9 +41,21 @@
       <p class="mb-0 text-primary fw-bold">Emergencias: 911 | Denuncia Anónima: 089</p>
     </div>
   </div>
-  
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   <script src="js/app.js"></script>
+
+  <!-- 🔹 Script para cerrar sesión con confirmación -->
+  <script>
+    document.getElementById("logoutBtn").addEventListener("click", () => {
+      const confirmar = confirm("¿Seguro que deseas cerrar sesión?");
+      if (confirmar) {
+        // Limpia los datos de sesión
+        localStorage.clear();
+        // Redirige al index.html
+        window.location.href = "index.html";
+      }
+    });
+  </script>
 </body>
 </html>
