--- a/ver_denuncias.html
+++ b/ver_denuncias.html
@@ -127,9 +127,11 @@
           "Content-Type": "application/json"
         },
         body: JSON.stringify({
+          user_id: "",
+          category: "",
           title: nuevoTitulo,
-            // category: categoria,
-            // descripcion,
+          descripcion: "",
+          location: ""
         })
       });
 
